--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- --------- FAVICON ---------- -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/phonsing_.jpg" type="image/x-icon">
 
-    <title>Portfolio | Ludiflex</title>
+    <title>Portfolio | p.phonsing_</title>
 </head>
 <body>
    <div class="container">
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">Doe</p>
-            <span>.</span>
+            <p class="nav-name">p.phonsing_</p>
         </div>
         <div class="nav-menu" id="myNavMenu">
             <ul class="nav_menu_list">
@@ -58,7 +57,7 @@
        <section class="featured-box" id="home">
           <div class="featured-text">
             <div class="featured-text-card">
-                <span>John Doe</span>
+                <span>NO AH</span>
             </div>
             <div class="featured-name">
                 <p>I'm <span class="typedText"></span></p>
@@ -81,7 +80,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="assets/images/avatar.png" alt="avatar">
+                <img src="assets/images/phonsing_.jpg" alt="avatar">
             </div>
           </div>
           <div class="scroll-icon-box">
@@ -214,7 +213,7 @@
     <!-- --------------- FOOTER --------------- -->
     <footer>
         <div class="top-footer">
-            <p>John Doe .</p>
+            <p>Phonsing Taleman</p>
         </div>
         <div class="middle-footer">
             <ul class="footer-menu">
@@ -239,7 +238,7 @@
             <div class="icon"><i class="uil uil-github-alt"></i></div>
         </div>
         <div class="bottom-footer">
-            <p>Copyright &copy; <a href="#home" style="text-decoration: none;">John Doe</a> - All rights reserved</p>
+            <p>APL PS</p>
         </div>
     </footer>
 
