--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               </div>
             </div>
             <div class="project-box">
-              <h3>ทดสอบสร้างระบบ StayHost ด้วย React กับ NodeJS</h3>
+              <h3>ทดสอบสร้างระบบ StayHost ด้วย React React-native กับ NodeJS</h3>
 
               <div class="sty">
                 <img src="./assets/images/Stayhost-Photoroom.png" alt="" />
